[package]
name = "expandable-impl"
description = "What if we could check declarative macros before using them?"
include = ["/src", "/doc"]
documentation = "https://docs.rs/expandable-impl"
readme = "../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# MSRV: 1.36 (checked in CI)
smallvec = "1.11"
proc-macro2 = { version = "1.0.89", features = ["span-locations"] }
rust-grammar-dpdfa.workspace = true
syn = { version = "2.0", features = ["full", "parsing"] }

[dev-dependencies]
# MSRV: 1.45 (crate-level documentation)
expect-test = "1.4"
quote = "1.0"
